adding linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: "Data Science & Analytics Projects"
 description: "Showcasing my work in Power BI, Python, and data analysis."
 remote_theme: pages-themes/minimal@v0.2.0
 google_analytics: "G-1N3HBP1NTX"  # Your Google Analytics ID
+linkedin: https://www.linkedin.com/in/09barbosacarlos
 
 # Add this if you already have other plugins
 plugins:
