--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "carlos-barbosa-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://orbek.github.io/portfolio/react-portfolio",
+  "homepage": "https://orbek.github.io/portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
