--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -7,12 +7,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^7.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "framer-motion": "^7.6.2",
-    "react-intersection-observer": "^9.4.0",
     "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
