--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Data Science & Analytics Projects"
+title: "Carlos Barbosa - AI Solutions Architect Portfolio"
 description: "Showcasing my work in Power BI, Python, and data analysis."
 theme: jekyll-theme-minimal
 google_analytics: "G-1N3HBP1NTX"  # Your Google Analytics ID
